Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignIntObjUndefinedField.quorum
class Main
    Integer v = Test()
    action Main
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Integer
        return undefined
    end
end