Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjNumberField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Number
        number var = 5.0
        return var
    end
end